--- a/index.html
+++ b/index.html
@@ -409,7 +409,7 @@ if ('serviceWorker' in navigator) {
   <div class="faq-answer">
     • <b>Download bei dir:</b> mind. 30 Mbit/s stabil<br>
     • <b>Upload (Server-Seite):</b> über 20 Mbit/s<br>
-    • <b>Latenz (Ping):</b> unter 50 ms<br>
+    • <b>Latenz (Ping) bei dir und Server:</b> unter 50 ms<br>
     • <b>Bitrate im Player:</b> 3–10 Mbit/s (bei 4K meist ca. 10 Mbit/s)<br>
     • <b>Verbindung:</b> stabiles WLAN (besser 5 GHz) oder LAN-Kabel<br><br>
     🔽 Wenn etwas davon nicht passt → Ruckeln/Abbrüche möglich
