--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
   <meta name="apple-mobile-web-app-title" content="Fritflix Feedback">
 <script>
-const VERSION = 'v1.1.3'; // ← Bei jedem Update ändern!
+const VERSION = 'v1.1.4'; // ← Bei jedem Update ändern!
 
 // === UPDATE BANNER STEUERUNG ===
 if ('serviceWorker' in navigator) {
@@ -433,7 +433,8 @@ if ('serviceWorker' in navigator) {
     4. <b>Eigener Speedtest:</b> Button „Eigener Speedtest“ oder Google Speedtest.<br>
     → Unter 30 Mbit/s Download oder über 50 ms Latenz = dein Anschluss ist das Problem.<br><br>
 
-    5. <b>10 Minuten warten</b> – kurzzeitige Schwankungen sind normal.<br>
+    5. <b>10 Minuten warten</b> – kurzzeitige Schwankungen sind normal.<br><br>
+    
     6. <b>App neu starten.</b><br>
     ➤ Immer noch Probleme? → Admin kontaktieren.
   </div>
@@ -445,7 +446,7 @@ if ('serviceWorker' in navigator) {
   <div class="faq-answer">
     1. WLAN optimieren (näher am Router, 5 GHz, weniger Wände)<br>
     2. Gerät per LAN-Kabel anstatt WLAN nutzen<br>
-    3. Bitrate reduzieren<br>
+    3. Bitrate des Films reduzieren<br>
     4. Fire TV / Android TV / modernes Handy statt altem Gerät oder Browser nutzen<br>
     5. Server-Auslastung & Speedtests prüfen<br>
     6. App statt Browser verwenden → immer stabiler
@@ -454,11 +455,11 @@ if ('serviceWorker' in navigator) {
 
 <!-- FAQ: Anmeldung Probleme -->
 <details class="faq-item">
-  <summary><span class="chev">▶</span> 🔐 Ich kann mich nicht anmelden</summary>
+  <summary><span class="chev">▶</span> 🔐 Ich kann mich nicht anmelden (evtl. Fehler "keine Berechtigung um auf den Server zuzugreifen")</summary>
   <div class="faq-answer">
     1. <b>Passwort korrekt?</b> Groß-/Kleinschreibung beachten.<br>
-    2. <b>Noch auf einem anderen Gerät eingeloggt?</b> → Dort abmelden (nur 1 Gerät gleichzeitig erlaubt).<br>
-    3. <b>Profilbild grau?</b> Konto nach 3× falschem Passwort gesperrt → Admin informieren.<br>
+    2. <b>Noch auf einem anderen Gerät eingeloggt?</b> → Dort abmelden (nur 1 Gerät gleichzeitig ist erlaubt).<br>
+    3. <b>Profilbild grau?</b> Konto ist gesperrt → Admin informieren.<br>
     4. Immer noch nicht? → Admin melden.
   </div>
 </details>
@@ -471,7 +472,7 @@ if ('serviceWorker' in navigator) {
     2. Server-Adresse eingeben:<br>
     → <b>https://fritflix.dedyn.io:33420</b><br>
     → iPhone/iPad: <b>https://app.fritflix.dedyn.io:33420</b><br>
-    3. Im Browser: „Generalbenutzer“ + Passwort aus der WhatsApp-Gruppe eingeben<br>
+    3. <b>Nur</b> im Browser: „Generalbenutzer“ + Passwort aus der WhatsApp-Gruppenbeschreibung eingeben<br>
     4. Dein Profil auswählen → privates Passwort eingeben<br>
     5. Losstreamen!
   </div>
@@ -482,8 +483,8 @@ if ('serviceWorker' in navigator) {
   <summary><span class="chev">▶</span> 🔍 Ich finde einen Film/Serie nicht</summary>
   <div class="faq-answer">
     1. Keine Leerzeichen vorne/hinten im Suchfeld<br>
-    2. Deutsche & englische Titel werden erkannt<br>
-    3. Umlaute manchmal problematisch → anderes Wort aus dem Titel probieren<br>
+    2. Nur Deutsche & Originaltitel werden erkannt<br>
+    3. Umlaute wie ä, ö oder ü sind manchmal problematisch → anderes Wort aus dem Titel oder Originaltitel probieren<br>
     4. Nicht vorhanden? → Wunsch an Admin schicken
   </div>
 </details>
@@ -503,8 +504,9 @@ if ('serviceWorker' in navigator) {
 <details class="faq-item">
   <summary><span class="chev">▶</span> Fehlermeldung: „Nicht kompatibel mit Client/Abspielgerät“</summary>
   <div class="faq-answer">
-    Meist nur ein Ladeproblem → zu langsam.<br>
+    Der Film at zu lange geladen udn Jellyfin hat abgebrochen.<br>
     ➤ Bitrate senken + neu laden<br>
+    ➤ Eigenen Speed und Latenz checken mit Speedtest<br>
     ➤ Anderes Gerät testen
   </div>
 </details>
@@ -513,7 +515,7 @@ if ('serviceWorker' in navigator) {
 <details class="faq-item">
   <summary><span class="chev">▶</span> Fehlermeldung: „Kann nicht wiedergegeben werden“</summary>
   <div class="faq-answer">
-    Externe Festplatte wurde kurz nicht erkannt → Datei „verschwunden“.<br>
+    Externe Festplatte wurde nicht erkannt → Datei ist für Jellyfin „verschwunden“.<br>
     ➤ Admin informieren
   </div>
 </details>
@@ -522,7 +524,7 @@ if ('serviceWorker' in navigator) {
 <details class="faq-item">
   <summary><span class="chev">▶</span> Server ist offline</summary>
   <div class="faq-answer">
-    1. VPN komplett ausschalten (nur DE & ES erlaubt)<br>
+    1. VPN komplett ausschalten oder Land wechseln (nur DE & ES erlaubt)<br>
     2. Zur vollen Stunde: automatischer Check → bis zu 15 Min offline<br>
     3. Länger als 20 Min offline → Admin melden
   </div>
@@ -544,7 +546,7 @@ if ('serviceWorker' in navigator) {
   <div class="faq-answer">
     1. Über Noten-/Zahnrad-Symbol Tonspur wechseln<br>
     2. Andere Tonspur ausprobieren (manchmal falsch benannt)<br>
-    3. Hilft nicht → Bitrate auf 5 Mbit/s senken und nochmal probieren<br>
+    3. Hilft nicht)? → Bitrate auf 5 Mbit/s senken und Punkt 1 & 2 nochmal probieren<br>
     4. Immer noch falsch → Admin melden
   </div>
 </details>
@@ -553,8 +555,8 @@ if ('serviceWorker' in navigator) {
 <details class="faq-item">
   <summary><span class="chev">▶</span> Ton ist asynchron</summary>
   <div class="faq-answer">
-    • Im Browser normal → lieber die App nutzen<br>
-    • Auch in der App asynchron → Admin melden
+    • Im Browser passiert das manchmal → lieber die App nutzen<br>
+    • Auch in der App asynchron? → Admin melden
   </div>
 </details>
 
@@ -562,10 +564,10 @@ if ('serviceWorker' in navigator) {
 <details class="faq-item">
   <summary><span class="chev">▶</span> Untertitel fehlen oder werden trotz „Aus“ angezeigt</summary>
   <div class="faq-answer">
-    • 1–2 Minuten warten (laden verzögert)<br>
-    • Forced = nur Fremdsprache, Full = komplett<br>
-    • Eingebrannte Untertitel = nicht abschaltbar<br>
-    • Bug nach Umschalten → Film einfach neu starten<br>
+    • 1–2 Minuten warten (laden der Untertitel dauert ein bisschen)<br>
+    • Richtig gewählt?: Forced = nur nicht übersetzte Teile, Full = komplett<br>
+    • Manche Filme haben eingebrannte Untertitel. Die sind direkt in der Vidodatei & nicht abschaltbar<br>
+    • Bug nach mehrfachen Umschalten → Film einfach neu starten<br>
     • Immer noch falsch/fehlend → Admin melden
   </div>
 </details>
@@ -574,17 +576,19 @@ if ('serviceWorker' in navigator) {
 <details class="faq-item">
   <summary><span class="chev">▶</span> Wo finde ich die richtigen Apps?</summary>
   <div class="faq-answer">
-    • Smart TV → App Store → Jellyfin<br>
-    • Android / iOS → Jellyfin<br>
+    In den App Stores:
+    • Smart TV → Jellyfin<br>
+    • Android/iOS → Jellyfin<br>
     • Fire TV Stick → Jellyfin<br>
+    • Magenta TV → Jellyfin<br>
     • Apple TV → Swiftfin<br>
-    • PC → Jellyfin Media Player (GitHub)
+    • PC → Jellyfin Media Player <a href="https://github.com/jellyfin/jellyfin-media-player/releases/tag/v1.12.0" target="_blank">Download (richtige Version wählen)</a>
   </div>
 </details>
 
 <!-- FAQ: Browser Bug Generalnutzer -->
 <details class="faq-item">
-  <summary><span class="chev">▶</span> Im Browser immer wieder Generalnutzer-Anmeldung</summary>
+  <summary><span class="chev">▶</span> Im Browser kommt immer wieder Generalnutzer-Anmeldemaske</summary>
   <div class="faq-answer">
     Bekannter Bug nach Updates.<br>
     ➤ Admin informieren – wird in 2 Minuten gefixt
