--- a/index.html
+++ b/index.html
@@ -616,7 +616,7 @@ if ('serviceWorker' in navigator) {
 
   <script>
     emailjs.init({ publicKey: "E4jHB9-hSCQJ6yEUf" });
-    const API_BASE = "/api";
+    const API_BASE = "fritflix.cc/api";
     const SPEEDTEST_TOKEN = "fhe9wzr83ezrw7ft72636770pueu9uft";
     const OFFLINE_THRESHOLD_MS = 15 * 60 * 1000;
     const FETCH_TIMEOUT_MS = 10000;
