--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+!DOCTYPE html
 <html lang="de">
 <head>
   <meta charset="UTF-8">
@@ -252,7 +252,7 @@
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
   <meta name="apple-mobile-web-app-title" content="Fritflix Feedback">
 <script>
-const VERSION = 'v1.2.1'; // ← Bei jedem Update ändern!
+const VERSION = 'v1.2.2'; // ← Bei jedem Update ändern!
 
 // === UPDATE BANNER STEUERUNG ===
 if ('serviceWorker' in navigator) {
@@ -616,7 +616,7 @@ if ('serviceWorker' in navigator) {
 
   <script>
     emailjs.init({ publicKey: "E4jHB9-hSCQJ6yEUf" });
-    const API_BASE = "fritflix.cc/api";
+    const API_BASE = "https://fritflix.cc/api";
     const SPEEDTEST_TOKEN = "fhe9wzr83ezrw7ft72636770pueu9uft";
     const OFFLINE_THRESHOLD_MS = 15 * 60 * 1000;
     const FETCH_TIMEOUT_MS = 10000;
